Fixed up jasmine specs.

--- a/spec/javascripts/fixtures/game_board.html
+++ b/spec/javascripts/fixtures/game_board.html
@@ -8,80 +8,71 @@
       <div class='col-md-6 col-md-offset-3'>
         <h1 class='center'>Tic Tac Toe</h1>
         <div class='center' id='game_board'>
-          <input id="turn" name="turn" type="hidden" value="x" />
+          <input id="turn" name="turn" type="hidden" value="o" />
           <input id="computer_move" name="computer_move" type="hidden" value="4" />
           <div id='row_one'>
             <div class="grid box_0">
               <form action="/update_game_board?id=button_0" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="true" type="submit" value="x" />
                 </div>
               </form>
             </div>
             <div class="grid box_1">
-              <form action="/update_game_board?id=button_1" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
             <div class="grid box_2">
-              <form action="/update_game_board?id=button_2" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
           <div id='row_two'>
             <div class="grid box_3">
-              <form action="/update_game_board?id=button_3" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
             <div class="grid box_4">
-              <form action="/update_game_board?id=button_4" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
             <div class="grid box_5">
-              <form action="/update_game_board?id=button_5" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
           <div id='row_three'>
             <div class="grid box_6">
-              <form action="/update_game_board?id=button_6" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
             <div class="grid box_7">
-              <form action="/update_game_board?id=button_7" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
             <div class="grid box_8">
-              <form action="/update_game_board?id=button_8" class="button_to" method="post">
+              <form action="" class="button_to" method="post">
                 <div>
-                  <input type="submit" value="-" />
-                  <input name="authenticity_token" type="hidden" value="PK5tIO1DFaeHc7IU3DBmgSIRdSPJhbG+zMchTG8qQM8=" />
+                  <input disabled="disabled" type="submit" value="-" />
                 </div>
               </form>
             </div>
